[gd_scene load_steps=18 format=3 uid="uid://davl6ku5b6pc1"]

[ext_resource type="Script" path="res://Scripts/Scenes/overworld_state.gd" id="1_e5tjr"]
[ext_resource type="PackedScene" uid="uid://bs0l0q8pk81ye" path="res://Nodes/GameAssets/OverWorld/player_3d.tscn" id="1_t37h2"]
[ext_resource type="PackedScene" uid="uid://8081sbcix0p1" path="res://Nodes/GameAssets/OverWorld/overworld_camera.tscn" id="2_vrl82"]
[ext_resource type="PackedScene" uid="uid://c4vek4qf63ci6" path="res://Nodes/GameAssets/OverWorld/level_flag.tscn" id="4_8rcnt"]
[ext_resource type="FontFile" uid="uid://d4kb6nf34gjix" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="5_3np8f"]
[ext_resource type="Texture2D" uid="uid://cxoin3fpwtumc" path="res://Assets/Images/Icons/playIconWhite.png" id="6_jygle"]
[ext_resource type="Texture2D" uid="uid://duo1dhiutg60v" path="res://icon.svg" id="7_ic4ik"]
[ext_resource type="PackedScene" uid="uid://bdmgvugm62gxj" path="res://Nodes/GameAssets/audioTransition.tscn" id="9_f2tw8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nwyk"]
albedo_color = Color(0.764706, 0.764706, 0.764706, 1)
metallic = 0.38

[sub_resource type="BoxMesh" id="BoxMesh_8q4y7"]
material = SubResource("StandardMaterial3D_5nwyk")

[sub_resource type="BoxShape3D" id="BoxShape3D_davvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttrch"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_euclm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uhbpo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3a40y"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uqnw"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smh8p"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="OverworldState" type="Node3D"]
script = ExtResource("1_e5tjr")

[node name="OverworldCamera" parent="." node_paths=PackedStringArray("playerRef") instance=ExtResource("2_vrl82")]
transform = Transform3D(1, 0, 0, 0, 0.983571, 0.180519, 0, -0.180519, 0.983571, 0, 2.345, 12.671)
playerRef = NodePath("../player3D")
minBounds = Vector2(-4, 0)
maxBounds = Vector2(4, 13)
camSpeed = 3.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.559193, 0.829038, 0, -0.829038, 0.559193, 0, 6.22842, 4.90627)

[node name="player3D" parent="." instance=ExtResource("1_t37h2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.393364, 8.19944)

[node name="LevelFlag" parent="." instance=ExtResource("4_8rcnt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0875187, 0)
songName = "Tutorial"
songAuthor = "F3rn_Dev"
songPlayMin = 20.0
songPlayMax = 35.0

[node name="Placeholder Scene" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.054, 0.795)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Ground"]
transform = Transform3D(20, 0, 0, 0, 0.24, 0, 0, 0, 20, 0, 0, 0)
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Ground"]
transform = Transform3D(20, 0, 0, 0, 0.24, 0, 0, 0, 20, 0, 0, 0)
shape = SubResource("BoxShape3D_davvo")

[node name="Box1" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.89075, -0.340788, -0.604922)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box1"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box1"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box2" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.32746, -0.340788, 4.03893)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box2"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box2"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box3" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7254, -0.340788, 5.35054)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box3"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box3"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box4" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7254, -0.340788, -6.27296)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box4"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box4"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box5" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.63837, -0.340788, -1.45859)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box5"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box5"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box6" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.53968, -0.340788, 3.41404)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box6"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box6"]
shape = SubResource("BoxShape3D_davvo")

[node name="Box7" type="StaticBody3D" parent="Placeholder Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.581337, -0.340788, 6.24123)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Placeholder Scene/Box7"]
mesh = SubResource("BoxMesh_8q4y7")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Placeholder Scene/Box7"]
shape = SubResource("BoxShape3D_davvo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -500.0
offset_bottom = 720.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ttrch")

[node name="SongName" type="Label" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 51.0
offset_right = 200.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_3np8f")
theme_override_font_sizes/font_size = 40
text = "SongName"
horizontal_alignment = 1

[node name="SongAuthor" type="Label" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 139.0
offset_right = 120.0
offset_bottom = 189.08
grow_horizontal = 2
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("5_3np8f")
theme_override_font_sizes/font_size = 20
text = "Composed by:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SongDiff" type="Label" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 181.01
offset_right = 120.0
offset_bottom = 214.01
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_3np8f")
theme_override_font_sizes/font_size = 30
text = "SongDiff"
horizontal_alignment = 1

[node name="DiffRightButton" type="Button" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 176.01
offset_right = -90.0
offset_bottom = 211.01
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_euclm")
icon = ExtResource("6_jygle")
flat = true
expand_icon = true

[node name="DiffLeftButton" type="Button" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 115.0
offset_top = 211.545
offset_right = 145.0
offset_bottom = 246.545
grow_vertical = 2
rotation = 3.14159
theme_override_styles/focus = SubResource("StyleBoxEmpty_uhbpo")
icon = ExtResource("6_jygle")
flat = true
expand_icon = true

[node name="PlaySong" type="Button" parent="CanvasLayer/Control/bg"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -80.0
offset_right = 90.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_3np8f")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3a40y")
theme_override_styles/hover = SubResource("StyleBoxFlat_6uqnw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smh8p")
text = "Play"

[node name="Placeholder Rank Image" type="TextureRect" parent="CanvasLayer/Control/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ic4ik")

[node name="Placeholder" type="Label" parent="CanvasLayer/Control/bg/Placeholder Rank Image"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 4.0
offset_right = 93.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Placeholder Rank Image: "

[node name="BackgroundMusic" parent="." instance=ExtResource("9_f2tw8")]

[connection signal="button_down" from="CanvasLayer/Control/bg/DiffRightButton" to="." method="_on_diff_right_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/bg/DiffLeftButton" to="." method="_on_diff_left_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/bg/PlaySong" to="." method="_on_play_song_button_down"]
